wip-document-type
Work in progress per aggiunta della gestione entity ESFDocumentType e ESFPublicAuthority

--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
@@ -1080,3 +1080,5 @@ selected-year=Immettere anno
 startDate=Data inizio
 endDate=Data fine
 specific=Specifica
+
+add-document-type=Aggiungi tipo documento
