Data del Decesso

--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
@@ -281,7 +281,7 @@ shooterName = Nome e Cognome del Tiratore
 agree=Acconsento
 notAgree = Non Acconsento
 dateAgree=Data di Adesione
-dateOfDeathString= Data di morte
+dateOfDeathString= Data del decesso
 constitutive-act=Fotocopia Atto Costitutivo
 registered-status = Fotocopia Statuto Registrato
 planimetry-sports-stand=Planimetria Impianto Sportivo
@@ -620,7 +620,7 @@ created-Card = Stampa Pronta
 error-create-card=Errore nella creazione delle Tessere
 error-find-ass=Errore Ricerca Associazione
 error-assign-director=Errore assegnazione direttore di tiro
-find-Suspensive=Impossibile convocare Direttore di tiro perchè sono presenti sospensive nel periodo della gara
+find-Suspensive=Impossibile convocare Direttore di tiro perché sono presenti sospensive nel periodo della gara
 update-sportType-x=Modifica Specialita {0}
 add-new-sportType=Aggiunta Specialità
 add-new-matchType=Aggiunta nuova Tipologia di Match
@@ -647,11 +647,11 @@ error-deleteSospensive=Errore Cancellazione Sospensione
 error-updateSuspensive=Errore Aggiornamento Sospensione
 error-delete-shDr=Errore nella cancellazione Del Direttore di Tiro
 infromation-shDR-x=Informazioni Direttore di Tiro {0}
-findingOld = Operazione non riuscita perchè sono presenti vecchie nomine con i parametri inseriti 
+findingOld = Operazione non riuscita perché sono presenti vecchie nomine con i parametri inseriti 
 error-Shooter-Affiliation-x = Errore Tesseramento alla riga {0}
 error-Coni-Report=Errore nella generazione del report per il Coni, controllare la mancanza di dati per informazioni obbligatorie, sostituite con ******
 errorDeleteDelegationImpl=Errore nella cancellazzine
-errorDeleteDelegation= Impossibile cancellare Tiratore perchè sono presenti risultati per la gara
+errorDeleteDelegation= Impossibile cancellare Tiratore perché sono presenti risultati per la gara
 succesUpdateResult=Risultati aggiornati correttamente
 errorUpdateResult= Errore aggiornamento risultati
 errorUpdateResultPortletIsSetInViewMode = Errore nell'aggiornare i risultati: stai nella modalita' di sola lettura
@@ -680,14 +680,14 @@ privacy1-info=Info Privacy 1
 privacy2-info=Info Privacy 2
 privacy3-info=Info Privacy 3
 Compulsory-acceptance = Accettazione obbligatoria per procedere alla registrazione
-shooter-error-update-deathDate=Errore formato data di morte
+shooter-error-update-deathDate=Errore formato data del decesso
 card_Removed=Tessera Rimossa
 card_Assigned=Tessera Assegnata
 removeCard = Rimuovi Tessera
 endDate_error=Errore data di fine tessera
 card_id_error=Errore tessera 
 Match_not_find_error=Errore derivante dai Match del tiratore
-card_not_eraseable_error=Non è possibile eliminare la tessera perchè il tiratore presenta ruoli attivi oppure match in corso, oppure è un nazionale
+card_not_eraseable_error=Non è possibile eliminare la tessera perché il tiratore presenta ruoli attivi oppure match in corso, oppure è un nazionale
 user-password-message=Errore di inserimento Password
 mail_error=Errore invio Mail
 esfRole-reference-error=Errore assegnazione ruolo
@@ -701,8 +701,8 @@ add_cane_message=Aggiungi Canne
 edit_catridge_message=Modifica Cartucce
 add_catridge_message=Aggiungi Cartucce
 assigned_role=Sono presenti ruoli assegnati a questo tiratore, deassociare i ruoli prima di rimuovere la tessera
-is_national=Non è possibile rimuovere la tessera perchè questo tiratore è nazionale
-esfDelgation-reference-error=Ipossibile rimuovere delibera perchè il tiratore partecipa a gare ancora non concluse
+is_national=Non è possibile rimuovere la tessera perché questo tiratore è nazionale
+esfDelgation-reference-error=Ipossibile rimuovere delibera perché il tiratore partecipa a gare ancora non concluse
 
 begin-card-reference-error=Valore finale delle tessere minore di quello iniziale
 format-num-card-reference-error=formato delle tessere errato
@@ -739,7 +739,7 @@ address-organizzation=Indirizzo aggiuntivo
 address-user-obl=Indirizzo
 address-user=Indirizzo aggiuntivo 
 esfcard-add-success= Tutte le tessere sono state inserite
-esfcard-partialadd-success= Non tutte le tessere sono state inserite. Le restanti tessere non sono state inserite perchè raggiunto il numero massimo per il CODICE proposto 
+esfcard-partialadd-success= Non tutte le tessere sono state inserite. Le restanti tessere non sono state inserite perché raggiunto il numero massimo per il CODICE proposto 
 partecipant-already-assigned-message=Sono stati assegnati dei partecipanti
 ct-partecipant-assegn=Coaches assegnati
 Staff-assegn=Personale Selezionato
