svil-document-type
Terminate le operazioni di creazione e modifica sull'entity ESFDocumentType

--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
@@ -1082,3 +1082,5 @@ endDate=Data fine
 specific=Specifica
 
 add-document-type=Aggiungi tipo documento
+document-type-desc=Descrizione documento
+document-type-expiration=Mesi Preavviso
