--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 ##
 ## Buttons
 ##
@@ -2166,4 +2165,10 @@ endDate=Data fine
 specific=Specifica
 
 add-document-type=Aggiungi tipo documento
->>>>>>> branch 'anomalia-id16' of https://github.com/ematedev/fitav
+
+##############################
+# Messaggi per Gestione Gara
+##############################
+MSG-gara-GestioneTipi-Aggiunto-OK=Tipo Gara Aggiunto correttamente
+MSG-gara-GestioneTipi-Modificato-OK=Tipo Gara Modificato correttamente
+MSG-gara-GestioneTipi-Gestione-ERROR=ERRORE durante la gestione del Tipo Gara
