--- a/esf-renewal-company-portlet/docroot/WEB-INF/src/content/Language_it.properties
+++ b/esf-renewal-company-portlet/docroot/WEB-INF/src/content/Language_it.properties
@@ -49,7 +49,7 @@ phoneNumbers=Recapiti Telefonici
 postal=Bollettino postale
 provinces=Province
 renew=Rinnova
-renewal-module-x=Modulo di rinnovo dell'afiliazione {0}
+renewal-module-x=Modulo di Rinnovo dell'Affiliazione {0}
 renewal-request-was-taken-over=La richiesta di rinnovo è stata presa in carico
 renewal-successful=Rinnovo avvenuto con successo
 renewed=Storico Rinnovi
