--- a/esf-fitav-portlet/docroot/WEB-INF/classes/content/Language_it.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/classes/content/Language_it.properties
@@ -2161,8 +2161,19 @@ startDate=Data inizio
 endDate=Data fine
 specific=Specifica
 
-add-document-type=Aggiungi tipo documento
 
+##############################
+#Document Type MSG
+##############################
+
+add-document-type=Aggiungi tipo documento
+document-type-desc=Descrizione
+document-type-expiration=Mesi preavviso
+expirationMonthsNotice=Mesi preavviso
+success-document-type-persist=Document Type salvato
+success-document-type-delete=Document Type cancellato
+error-document-type-persist=Salvataggio Document Type fallito
+error-document-type-delete-impossible=Uno o più Documenti utilizzano questo Document Type, impossibile effettuare la cancellazione
 ##############################
 # Messaggi per Gestione Gara
 ##############################
