--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
@@ -1081,6 +1081,27 @@ startDate=Data inizio
 endDate=Data fine
 specific=Specifica
 
+##############################
+#Document Type MSG
+##############################
+
 add-document-type=Aggiungi tipo documento
-document-type-desc=Descrizione documento
-document-type-expiration=Mesi Preavviso
+document-type-desc=Descrizione
+document-type-expiration=Mesi preavviso
+expirationMonthsNotice=Mesi preavviso
+success-document-type-persist=Document Type salvato
+success-document-type-delete=Document Type cancellato
+error-document-type-persist=Salvataggio Document Type fallito
+error-document-type-delete-impossible=Uno o più Documenti utilizzano questo Document Type, impossibile effettuare la cancellazione
+
+
+##############################
+#Public Authority MSG
+##############################
+
+add-public-authority=Aggiungi Ente
+public-authority-desc=Descrizione
+success-public-authority-persist=Ente salvato
+success-public-authority-delete=Ente cancellato
+error-public-authority-persist=Salvataggio Ente fallito
+error-public-authority-delete-impossible=Uno o più Documenti utilizzano questo Ente, impossibile effettuare la cancellazione
