--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
@@ -728,7 +728,9 @@ referee = Arbitro
 no-delegation-were-found=Nessun Azzurrino trovato
 esfBrand-reference-error=La marca è usata in un campo
 esfElectronic-reference-error=La componente elettronica è usata in un campo
-match-success-insertupdate=La gara è stata inserita
+match-success-insert=La gara è stata inserita
+match-success-update=La gara è stata aggiornata
+match-error-operation=Problema durante il salvataggio della gara
 date-message=La data di inizio deve essere precedente alla data di fine
 code-null-message=Problemi nella generazione del codice. Assicurarsi di aver selezionato la Regione e/o la Provincia
 address-organizzation-obl-p=Sede legale
