--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
@@ -728,7 +728,9 @@ referee = Arbitro
 no-delegation-were-found=Nessun Azzurrino trovato
 esfBrand-reference-error=La marca è usata in un campo
 esfElectronic-reference-error=La componente elettronica è usata in un campo
-match-success-insertupdate=La gara è stata inserita
+match-success-insert=La gara è stata inserita
+match-success-update=La gara è stata aggiornata
+match-error-operation=Problema durante il salvataggio della gara
 date-message=La data di inizio deve essere precedente alla data di fine
 code-null-message=Problemi nella generazione del codice. Assicurarsi di aver selezionato la Regione e/o la Provincia
 address-organizzation-obl-p=Sede legale
@@ -2160,7 +2162,9 @@ selected-year=Immettere anno
 startDate=Data inizio
 endDate=Data fine
 specific=Specifica
-<<<<<<< HEAD
+
+error-federal-role=Problema durante il salvataggio dell'incarico federale
+
 ##############################
 #Document Type MSG
 ##############################
@@ -2186,39 +2190,12 @@ success-public-authority-delete=Ente cancellato
 error-public-authority-persist=Salvataggio Ente fallito
 error-public-authority-delete-impossible=Uno o più Documenti utilizzano questo Ente, impossibile effettuare la cancellazione
 
-=======
-
-##############################
-#Document Type MSG
-##############################
-
-add-document-type=Aggiungi tipo documento
-document-type-desc=Descrizione
-document-type-expiration=Mesi preavviso
-expirationMonthsNotice=Mesi preavviso
-success-document-type-persist=Document Type salvato
-success-document-type-delete=Document Type cancellato
-error-document-type-persist=Salvataggio Document Type fallito
-error-document-type-delete-impossible=Uno o più Documenti utilizzano questo Document Type, impossibile effettuare la cancellazione
-
-##############################
-#Public Authority MSG
-##############################
-
-add-public-authority=Aggiungi Ente
-public-authority-desc=Descrizione
-success-public-authority-persist=Ente salvato
-success-public-authority-delete=Ente cancellato
-error-public-authority-persist=Salvataggio Ente fallito
-error-public-authority-delete-impossible=Uno o più Documenti utilizzano questo Ente, impossibile effettuare la cancellazione
->>>>>>> 4e2f23245d33f5cc80bffcdd36acf34e75accc38
 ##############################
 # Messaggi per Gestione Gara
 ##############################
 MSG-gara-GestioneTipi-Aggiunto-OK=Tipo Gara Aggiunto correttamente
 MSG-gara-GestioneTipi-Modificato-OK=Tipo Gara Modificato correttamente
-<<<<<<< HEAD
 MSG-gara-GestioneTipi-Gestione-ERROR=ERRORE durante la gestione del Tipo Gara
-=======
-MSG-gara-GestioneTipi-Gestione-ERROR=ERRORE durante la gestione del Tipo Gara
->>>>>>> 4e2f23245d33f5cc80bffcdd36acf34e75accc38
+date-format_error=La Data non ha un formato corretto.Inserire gg/mm/aaaa
+end-date-error=La Data Fine deve essere maggiore o uguale alla Data Inizio
+hour-format-error=L'ora non ha un formato corretto. Inserire hh/mm
