--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
@@ -111,7 +111,6 @@ IdentityCard=Carta D'Identità
 Passport=Passaporto
 add-EventType= Aggiungi un Tipo di Evento
 issfIdNumber= Identificativo Federazione Internazionale
-Add-State= Aggiungi Stato
 Edit = Modifica
 Assign Entity = Assegna Stato
 add-flight = Aggiungi Volo
@@ -175,11 +174,11 @@ isChangeCategory= Valido per il cambio di categoria
 choose-type-of-event = Selezionare Tipo di Evento
 Olimpic-Match = Match Olimpico
 National-Match = Match Non Olimpico
-Event = Evento o Raduno
+Event=Evento o Raduno
 add_Olimpic-Match =Aggiungi Match Olimpico
 add_National-Match =Aggiungi Match Non Olimpico
 add_Event =Aggiungi Evento o Raduno
-run = Conferma
+run=Conferma
 Board_of_year = Consiglio Direttivo Anno
 affiliates = affilia
 date-change = Data Modifica
@@ -353,7 +352,7 @@ maritial-status  = Stato civile
 place-of-birth = Luogo di nascita
 residence-city = Citta' di residenza
 international-place = Svolgimento gara all'estero
-documents-info = Documenti
+documents-info=Documenti
 guns-info = Armi
 choose-shooter = Seleziona il tiratore
 bronze-medals = Medaglie di bronzo
@@ -582,7 +581,7 @@ job=Settore
 Macrocategory=Macrocategoria
 EventType=Tipo di Evento
 num-disk-team = Numero Bersagli per Squadra
-esfMatchTypeId = Tipo di Gara
+esfMatchTypeId=Tipo di Gara
 esfShooterCategoryIds = Categoria dei Tiratori
 esfShooterQualificationIds = Qualifiche
 esfCountryId= Nazione
@@ -595,7 +594,7 @@ assigned = Assegnata
 esfStateId = Stato ID
 shooter-categories = Categoria Tiratori
 Assoce_Category = Associa alla Categoria
-speciality  = Specialità
+speciality=Specialità
 OrganizatioHistory = Storia della Società
 organization-code=Codice Società
 shooter_note=Note del tiratore
@@ -1221,7 +1220,6 @@ end-Date-National=Fine mandato
 enter-integer-positive-number=Inserisci un numero intero positivo
 esf-gun-type-name=Produttore
 esf-gunType-select =gun Type (Automatic Copy)
-event site=event site (Automatic Copy)
 federal_roles=Incarichi federali
 first-registration=Prima registrazione
 first-registration-cost=Costo di prima registrazione
@@ -1309,7 +1307,7 @@ selectCompany=Seleziona Società
 selectDescriptionCategori=Seleziona Categoria
 selectInformationView =select information view (Automatic Copy)
 select_filters =Select Filters (Automatic Copy)
-select_years_earlier =select years earlier (Automatic Copy)
+select_years_earlier=Seleziona anno
 send=invia
 sesso-select=Sesso
 shooter affiliated=Shooter Affiliated (Automatic Copy)
@@ -1357,8 +1355,7 @@ year-delegation=Anno delegazione
 ADD-CANES=Aggiungi Canne
 ADD-CATRIDGES=Aggiungi Cartucce
 ADD-RIFLES=Aggiungi Fucile
-Abilitato** =Affiliato (Automatic Copy)
-Add-State =Add State (Automatic Copy)
+Abilitato** =Affiliato
 American1=Americano 1
 American2=Americano 2
 American3=Americano 3
@@ -1613,7 +1610,6 @@ doctor =Doctor (Automatic Copy)
 doctor-matches-of-tournament=Aggiungi dottore per il torneo
 doctor-matches-of-tournament-complete=Completa le informazioni per il dottore
 document-number =Document number (Automatic Copy)
-documents-info =Documents (Automatic Copy)
 edit-flight=Modifica Voli
 edit-flight =edit flight (Automatic Copy)
 edit-gun =edit gun (Automatic Copy)
@@ -1689,7 +1685,6 @@ esfGun-duplicate-name-error=Nome Arma Già Presente
 esfGunKind-reference-error=Sono presenti armi di questo modello
 esfGunKindId-reference-error=Errore Modello Arma
 esfGunType-reference-error=Sono presenti armi di questa marca
-esfMatchTypeId =Match Type (Automatic Copy)
 esfRole-MAx-User-reference-error =Max Users Assigned for roles (Automatic Copy)
 esfRole-reference-error=Errore assegnazione ruolo
 esfShooterCategoryIds =Shooter Category (Automatic Copy)
@@ -2019,7 +2014,6 @@ shooters =Shooters (Automatic Copy)
 silver-medals =Silver medals (Automatic Copy)
 sizeDress=Taglia
 socialnetwork=Social Network
-speciality  =speciality (Automatic Copy)
 sport-ass=Ass. Sportive
 sport-assocition-place  =Match venue (Automatic Copy)
 sport-options=Categorie e Qualifiche
@@ -2173,3 +2167,12 @@ specific=Specifica
 startDate=Data inizio
 success-document-type-delete=Document Type cancellato
 success-document-type-persist=Document Type salvato
+
+#########################################
+# Stati associazione
+#########################################
+state-name-invalid=Il campo nome è obbligatorio
+state-name-message=Il nome dello stato è già presente
+state-assigned-message=Lo stato non può essere cancellato perché in uso, modificare o cancellare le associazioni prima di procedere alla cancellazione
+assign-entity=Associa Entità
+add-state=Aggiungi stato
