fix-ripristino-conf
ripristino pagina di configurazione ESFNationalMatchPortlet

--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
@@ -1919,3 +1919,6 @@ state-name-message=Il nome dello stato è già presente
 state-assigned-message=Lo stato non può essere cancellato perché in uso, modificare o cancellare le associazioni prima di procedere alla cancellazione
 assign-entity=Associa Entità
 add-state=Aggiungi stato
+
+olimpicMatch=Gara Olimpica
+nationalMatch=Gara non Olimpica
