--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
@@ -125,6 +125,7 @@ arrive-hour=Orario di Arrivo
 is-favorite-gun=Arma preferita
 match-site=Luogo Gara
 olimpic-qualification=Valido per Qualificazione Olimpica
+isOlimpicQualificationMatch=Valido per Qualificazione Olimpica
 #international-place=Nazione
 add-esfPartecipantInfo=Aggiungi Informazioni Partecipante
 add-gun=Aggiungi Arma
@@ -1052,7 +1053,6 @@ insert-first-three-position=Inserisci le prime tre posizioni
 skeet-male=SKEET MASCHILE
 skeet-female=SKEET FEMMINILE
 user-nationality=Nazionalit&agrave;
-italy=ITALIANO
 skeetResultsAzzurri=SKEET
 doubleTrapResultsAzzurri=DOUBLE TRAP
 fossaOlimpicaResultsAzzurri=FOSSA OLIMPICA
@@ -1840,7 +1840,6 @@ error-insert-association=Errore nell'inserire l'associazione, controllare che l'
 final-result=Risultato Finale
 fossaOlimpicaAzzurri=Fossa Olimpica
 insert-first-three-position=Inserisci le prime tre posizioni
-italy=ITALIANO
 position=Posizione
 shoot-off=Spareggio
 shoot-off-final=Finale Spareggio
@@ -1919,6 +1918,8 @@ state-name-message=Il nome dello stato è già presente
 state-assigned-message=Lo stato non può essere cancellato perché in uso, modificare o cancellare le associazioni prima di procedere alla cancellazione
 assign-entity=Associa Entità
 add-state=Aggiungi stato
+choose-entity=Seleziona Entità
 
 olimpicMatch=Gara Olimpica
 nationalMatch=Gara non Olimpica
+italy=italia
