--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language_it.properties
@@ -1923,3 +1923,4 @@ choose-entity=Seleziona Entità
 olimpicMatch=Gara Olimpica
 nationalMatch=Gara non Olimpica
 italy=italia
+match-search-fields=Valorizzare almeno uno dei filtri di ricerca
